--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,9 @@ dependencies {
     compile 'com.facebook.android:account-kit-sdk:4.13.2'
     compile 'com.google.firebase:firebase-core:9.2.1'
     compile 'com.google.firebase:firebase-auth:9.2.1'
-    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+    //compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'io.github.luizgrp.sectionedrecyclerviewadapter:sectionedrecyclerviewadapter:1.0.4'
 
 }
 
