--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,11 +32,7 @@
             android:name=".LoginActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".activity.ChildrenActivity"/>
 
@@ -46,6 +42,18 @@
             android:label="Notes"/>
         <activity android:name=".activity.ReportActivity"
             android:label="Bullletin"/>
+        <activity android:name=".activity.RegisteredActivity"
+            android:label="Ajout"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            </activity>
+        <activity android:name=".activity.CalendarActivity"
+            android:label="Calendrier Scolaire"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
