--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:9.4.0'
     compile 'com.google.firebase:firebase-storage:9.4.0'
     compile 'com.google.firebase:firebase-auth:9.4.0'
+    compile 'me.zhanghai.android.materialprogressbar:library:1.1.7'
 }
 
 apply plugin: 'com.google.gms.google-services'
