--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     compile 'com.google.firebase:firebase-storage:9.4.0'
     compile 'com.google.firebase:firebase-auth:9.4.0'
     compile 'com.google.code.gson:gson:2.7'
+    compile 'com.github.clans:fab:1.6.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
